# zero2prod

./: Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-6df16d5b49e91986a5aefa13ed8b1dc706033860fe51ee9cae7a10b0ffbaae32.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250313033216_create_subscriptions_table.sql  20250330084508_create_subscription_tokens_table.sql  20250407085622_create_users_table.sql  20250411093704_seed_user.sql  20250413033659_create_idempotency_table.sql  20250413142215_create_newsletter_issues_table.sql  20250414011309_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
