[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
claim = "0.5.0"
config = "0.15.11"
fake = "4.2.0"
once_cell = "1.21.1"
secrecy = {version = "0.10.3", features = ["serde"]}
# env_logger = "0.11.7"
# log = "0.4.26"
serde = {version = "1.0.219", features=["derive"]}
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "macros", "uuid"] }
tracing = { version = "0.1.41", features = ["log"]}
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features=["registry", "env-filter"]}
unicode-segmentation = "1.12.0"
uuid = {version="1.16.0", features=["v4"]}
validator = "0.20.0"
reqwest = {version="0.12.15", default-features=false, features=["json", "rustls-tls"]}
wiremock = "0.6.3"

[dev-dependencies]
tokio = "1.44.0"
serde_json = "1"
